<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_Solicitud">

    <Button
        android:id="@+id/btn_AsesoriaE2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:onClick="asesoriaE"
        android:text="@string/btn_AsesoriaE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Asesoria2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:onClick="asesoria"
        android:text="@string/btn_Asesoria"
        app:layout_constraintBottom_toTopOf="@+id/btn_AsesoriaE2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTema2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="12dp"
        android:text="@string/txtTema"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Tema"
        app:layout_constraintStart_toStartOf="@+id/Tema" />

    <TextView
        android:id="@+id/txtMateria2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="17dp"
        android:text="@string/txtMateria"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Materia"
        app:layout_constraintEnd_toEndOf="@+id/Materia" />

    <TextView
        android:id="@+id/txtTitulo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="53dp"
        android:text="@string/txtTitulo2"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/txtMateria2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTitulo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/txtTitulo"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTitulo4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Regresar7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="29dp"
        android:onClick="Regresar"
        android:text="@string/btn_Regresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Materia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="67dp"
        android:ems="10"
        android:hint="@string/etxt_Materia"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtTema2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Tema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/etxt_Tema"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_Asesoria2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>