<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6_AppPago">

    <TextView
        android:id="@+id/txtTituloPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="79dp"
        android:text="@string/txt_TituloPA"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/txtCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Regresar6" />

    <Button
        android:id="@+id/btn_Regresar6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="39dp"
        android:onClick="Regresar"
        android:text="@string/btn_Regresar6"
        app:layout_constraintBottom_toTopOf="@+id/txtTituloPA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/txtCorreo"
        app:layout_constraintBottom_toTopOf="@+id/etxt_Correo"
        app:layout_constraintEnd_toEndOf="@+id/etxt_Correo"
        app:layout_constraintStart_toStartOf="@+id/etxt_Correo"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloPA" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="123dp"
        android:text="@string/txtPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnPagar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxt_Correo" />

    <EditText
        android:id="@+id/etxt_Correo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="77dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/etxt_Correo"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etxt_Password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="54dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/etxt_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/btnPagar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="149dp"
        android:text="@string/btn_Pagar2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>