<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2_AsesoriaE">

    <TextView
        android:id="@+id/txtHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/txtHistorial"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/lv_historial1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloAE" />

    <TextView
        android:id="@+id/txtTituloAE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="28dp"
        android:text="@string/txtTituloAE"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/txtHistorial"
        app:layout_constraintStart_toStartOf="@+id/btn_Regresar2"
        app:layout_constraintTop_toBottomOf="@+id/btn_Regresar2" />

    <Button
        android:id="@+id/btn_Regresar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="23dp"
        android:onClick="Regresar"
        android:text="@string/btn_Regresar2"
        app:layout_constraintBottom_toTopOf="@+id/txtTituloAE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBuscarPor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="21dp"
        android:text="@string/txtBuscarPor"
        app:layout_constraintBottom_toTopOf="@+id/txtIDClase"
        app:layout_constraintStart_toStartOf="@+id/txtIDClase"
        app:layout_constraintTop_toBottomOf="@+id/lv_historial1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:onClick="buscarEspecifica"
        android:text="@string/btn_Buscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxt_IDAE" />

    <TextView
        android:id="@+id/txtIDClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:text="@string/txtIDClase"
        app:layout_constraintBottom_toTopOf="@+id/etxt_IDAE"
        app:layout_constraintEnd_toEndOf="@+id/etxt_IDAE"
        app:layout_constraintStart_toStartOf="@+id/etxt_IDAE"
        app:layout_constraintTop_toBottomOf="@+id/txtBuscarPor" />

    <ListView
        android:id="@+id/lv_historial1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/txtBuscarPor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHistorial" />

    <EditText
        android:id="@+id/etxt_IDAE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/etxt_IDAE"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIDClase" />

</androidx.constraintlayout.widget.ConstraintLayout>