<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4_seleccionP">

    <TextView
        android:id="@+id/txtTituloAE3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="40dp"
        android:text="@string/txtTituloP"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTotal"
        app:layout_constraintStart_toEndOf="@+id/btn_Regresar4"
        app:layout_constraintTop_toBottomOf="@+id/btn_Regresar4" />

    <Button
        android:id="@+id/btn_Regresar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="24dp"
        android:onClick="Regresar"
        android:text="@string/btn_Regresar4"
        app:layout_constraintBottom_toTopOf="@+id/txtTituloAE3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/txtTotal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtMetodoP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloAE3" />

    <TextView
        android:id="@+id/txtMetodoP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/txtMetodoP"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/lv_MetodosP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotal" />

    <ListView
        android:id="@+id/lv_MetodosP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMetodoP" />

</androidx.constraintlayout.widget.ConstraintLayout>